Atualização de Build

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 	<head>
-		<!--projecttitle--><title>TESTE</title><!--projecttitle-end-->
+		<!--projecttitle--><title>centroculturalnonaarte</title><!--projecttitle-end-->
 		<!--projectdescription--><meta name="description" content="Project 3Sixty Baru"><!--projectdescription-end-->
 		<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 		<meta charset="utf-8">
@@ -203,13 +203,13 @@
 				/*panoramas*/
 
 			if (panorama === 'Panorama_TrabalhodeConclusãodeCurso_20251001174933.jpg') {
-				addHotspot('images/white.png', new THREE.Vector3(311.17197562857314, -42.981061129515275, -246.01387605493915), () => {
+				addHotspot('images/white.png', new THREE.Vector3(304.84302112390424, -44.16040712518158, -253.60708040572712), () => {
 		switchPanorama('Panorama_TrabalhodeConclusãodeCurso_20251001181136.jpg');
 	});
 }
 
 			if (panorama === 'Panorama_TrabalhodeConclusãodeCurso_20251001181136.jpg') {
-				addHotspot('images/white.png', new THREE.Vector3(286.5332868898128, -36.743014924072966, -275.5107729518254), () => {
+				addHotspot('images/white.png', new THREE.Vector3(284.97323105704, -46.80926634346747, -275.33571262456036), () => {
 		switchPanorama('Panorama_TrabalhodeConclusãodeCurso_20251001174933.jpg');
 	});
 }
