Adição de teste de imagem

--- a/index.html
+++ b/index.html
@@ -206,6 +206,9 @@
 				addHotspot('images/white.png', new THREE.Vector3(304.84302112390424, -44.16040712518158, -253.60708040572712), () => {
 		switchPanorama('Panorama_TrabalhodeConclusãodeCurso_20251001181136.jpg');
 	});
+	addHotspot('images/interrogação.png', new THREE.Vector3(200.32109459349147, -35.8139469272833, 344.04185379424246), () => {
+		showMedia(1, 'images/images.jpg');
+	});
 }
 
 			if (panorama === 'Panorama_TrabalhodeConclusãodeCurso_20251001181136.jpg') {
